<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#151515"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dish_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dish_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_dish_description"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColor="#686868"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_dish_price"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dish_quantity"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/custom_btn_minus"
            android:text="@string/btn_minus" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/custom_btn_plus"
            android:text="@string/btn_plus" />


    </LinearLayout>

</LinearLayout>
